testing helm flask trigger

--- a/charts/helm-flask/templates/service-flask.yaml
+++ b/charts/helm-flask/templates/service-flask.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: flask-app-service
   labels:
-    app: flask-app
+    app: flask-app # for service monitor discovery.
 spec:
   type: LoadBalancer
   selector:
