--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,11 +4,15 @@ on:
   push:
     paths-ignore:
       - 'charts/**'
+      - 'README.md'
+      - '*ignore'
     branches:
       - main
   pull_request:
     paths-ignore:
       - 'charts/**'
+      - 'README.md'
+      - '*ignore'
     branches:
       - main
 
