--- a/.github/workflows/helm-ci.yaml
+++ b/.github/workflows/helm-ci.yaml
@@ -35,6 +35,10 @@ jobs:
                 sed -i "s/version: .*/version: 0.0.${{ github.run_number }}/g" ./Chart.yaml
                 echo "# this file was modified by a ci to update helm version tagging" >> ./Chart.yaml
 
+            - name: Debug Triggering Workflow
+              run: |
+               echo "Triggered by workflow: ${{ github.event.workflow_run.workflow }}"
+
             - name: Download Image Tag Artifact from App CI - Only If Triggered By App CI
               if: ${{ github.event.workflow_run.workflow == 'app ci' }}
               uses: actions/download-artifact@v4
