--- a/.github/workflows/helm-ci.yaml
+++ b/.github/workflows/helm-ci.yaml
@@ -37,7 +37,7 @@ jobs:
 
             - name: Debug Triggering Workflow
               run: |
-               echo "Triggered by workflow: ${{ github.event.workflow_run.workflow }}"
+               echo "Triggered by workflow: '${{ toJSON(github.event.workflow_run) }}'"
 
             - name: Download Image Tag Artifact from App CI - Only If Triggered By App CI
               if: ${{ github.event.workflow_run.workflow == 'app ci' }}
