--- a/.github/workflows/helm-ci.yaml
+++ b/.github/workflows/helm-ci.yaml
@@ -37,17 +37,17 @@ jobs:
 
             - name: Debug Triggering Workflow
               run: |
-               echo "Triggered by workflow: '${{ toJSON(github.event.workflow_run) }}'"
+               echo "Triggered by workflow: '${{ toJSON(github.event.workflow_run.name) }}'"
 
             - name: Download Image Tag Artifact from App CI - Only If Triggered By App CI
-              if: ${{ github.event.workflow_run.workflow == 'app ci' }}
+              if: ${{ github.event.workflow_run.name == 'app ci' }}
               uses: actions/download-artifact@v4
               with:
                 name: image_tag
               
 
             - name: Update Image Tag in values.yaml - Only If Triggered By App CI
-              if: ${{ github.event.workflow_run.workflow == 'app ci' }}
+              if: ${{ github.event.workflow_run.name == 'app ci' }}
               run: |
                 echo "this flow was triggered by app ci, needs to update image tag in values.yaml"
                 ls -lrta
