--- a/charts/monitor-stack/values.yaml
+++ b/charts/monitor-stack/values.yaml
@@ -1,6 +1,7 @@
 # service monitor and dashboards are outside of this file, sidecar used.
 kube-prometheus-stack:
   grafana:
+    adminPassword: "admin"
     grafana.ini:
       date_format:
         default_timezone: "browser"
