--- a/argocd/monitor-stack/kustomization.yaml
+++ b/argocd/monitor-stack/kustomization.yaml
@@ -10,7 +10,7 @@ helmCharts:
   valuesFile: "values.yaml"
   includeCRDs: true
 
-patchesJson6902:
+patches:
   - target:
       group: apiextensions.k8s.io
       version: v1
