--- a/attachments/first-argocd/flask-app.yaml
+++ b/attachments/first-argocd/flask-app.yaml
@@ -1,4 +1,4 @@
-apiVersion: argoproj.io/v1alpha1
+apiVersion: argoproj.io/v1alpha1 # follows helm chart repository.
 kind: Application
 metadata:
   name: flask-app # name of app
