--- a/argocd/monitor-stack2/values.yaml
+++ b/argocd/monitor-stack2/values.yaml
@@ -1,4 +1,7 @@
 prometheus:
+  prometheusSpec:
+    serviceMonitorSelector: {}
+    serviceMonitorSelectorNilUsesHelmValues: false
   service:
     type: ClusterIP
   server:
@@ -6,6 +9,9 @@ prometheus:
       enabled: false  # Disable PV for simplicity
 
 grafana:
+  grafana.ini:
+    date_format:
+      default_timezone: "browser"
   service:
     type: ClusterIP
   persistence:
@@ -19,3 +25,11 @@ grafana:
           url: http://prometheus-server.monitor.svc.cluster.local  # Update if needed
           access: proxy
           isDefault: true
+        - name: loki-auto
+          type: loki
+          uid: loki-omri
+          url: http://loki.log.svc.cluster.local:3100
+          access: proxy
+          isDefault: false
+          jsonData:
+            maxLines: 1000
