--- a/argocd/monitor-stack2/values.yaml
+++ b/argocd/monitor-stack2/values.yaml
@@ -1,5 +1,8 @@
 prometheus:
   prometheusSpec:
+    serviceMonitorNamespaceSelector:
+      matchNames:
+        - monitor
     serviceMonitorSelector: {}
     serviceMonitorSelectorNilUsesHelmValues: false
   service:
